[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/UILayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/LevelDemo.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/PlayerCharacter.tscn" type="PackedScene" id=3]
[ext_resource path="res://main_scene/MainGameScreen.gd" type="Script" id=4]
[ext_resource path="res://main_scene/MainGameCamera.gd" type="Script" id=6]

[node name="MainGameScreen" type="Node2D"]
pause_mode = 1
position = Vector2( 0, 1 )
script = ExtResource( 4 )

[node name="GameLayer" type="Node2D" parent="."]

[node name="LevelInformation" type="Node2D" parent="GameLayer"]
__meta__ = {
"_editor_description_": "Store levels here. YOU SHOULD NEVER BE TOUCHING THIS MANUALLY.

Or almost never."
}

[node name="LevelDemo" parent="GameLayer/LevelInformation" instance=ExtResource( 2 )]

[node name="PersistentThings" type="Node2D" parent="GameLayer"]
__meta__ = {
"_editor_description_": "This is stuff that stays beyond level loads. Generally this will probably just be the player."
}

[node name="MainGameCamera" type="Camera2D" parent="GameLayer/PersistentThings"]
position = Vector2( 285.174, -13.6516 )
scale = Vector2( 3, 3 )
current = true
smoothing_enabled = true
smoothing_speed = 2.5
script = ExtResource( 6 )

[node name="PlayerCharacter" parent="GameLayer/PersistentThings" instance=ExtResource( 3 )]

[node name="UILayer" parent="." instance=ExtResource( 1 )]
pause_mode = 2
[connection signal="ask_ui_to_open_test_dialogue" from="." to="UILayer" method="_on_MainGameScreen_ask_ui_to_open_test_dialogue"]
[connection signal="notify_ui_of_level_load" from="." to="UILayer" method="_on_MainGameScreen_notify_ui_of_level_load"]
[connection signal="notify_finished_level_load_related_fading" from="UILayer" to="." method="_on_UILayer_notify_finished_level_load_related_fading"]
